--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <img alt="Johannes Hoppe" src="images/signature.svg" width="320">
         </a>
       </li>
-      <li><a href="#projects">Projects</a></li>
       <li><a href="#vita">Curriculum Vitæ</a></li>
       <li><a href="#references">References</a></li>
       <li><a href="#contact">Contact</a>
@@ -30,47 +29,6 @@
   <div id="mainWrapper" class="container">
     <section id="figure1" class="dont-print">
       <img alt="Johannes Hoppe" src="images/johannes_hoppe.jpg" width="800">
-    </section>
-    <section id="projects" class="paper dont-print">
-      <blockquote class="float-right text-right">
-        <p>Don't cry because it's over, smile because it happened.</p>
-        <footer class="blockquote-footer">Dr. Seuss</footer>
-      </blockquote>
-      <div class="clearfix"></div>
-      <div class="page-header">
-        <h1>Projects</h1>
-      </div>
-      <iframe width="600" height="338" src="https://www.youtube.com/embed/D9owK6OHUWE?rel=0" frameborder="0" allowfullscreen></iframe>
-      <h3>Music Beam
-                <small><a href="http://www.musicbeam.org/">musicbeam.org</a></small>
-            </h3>
-      <p>MusicBeam is an open source software which enables you to use your home projector to create an entire laser show for your next party. MusicBeam is music triggered and allows you to adjust nearly every detail of the performance.</p>
-
-      <img src="images/veerkant.jpg" alt="Veerkant founders" width="600" class="img" style="padding-bottom: 10px">
-      <h3>Veerkant
-                <small><a href="http://www.veerkant.com/">veerkant.com</a></small>
-            </h3>
-      <p>Veerkant offers a selection of fine art pieces. By exploring our gallery you bypass the saturation of the mass market. Quality is at the forefront of our operations. We know it can be hard, but we have the right tools and know-how to ease your decision.
-        Explore and experience on our platform, rest assured that your investment is in the right hands.</p>
-
-      <h3>YOLOsurvey
-                <small>Proof of Concept</small>
-            </h3>
-      <p>YOLOsurvey is a polar question survey platform, that is explicitly targeting Generation Z. The Projects goal was it to increase the response rate of surveys when shared over Facebook and other social media. The reponse rate was successfully improved
-        form 2% to 66% (n=150).</p>
-
-      <h3>Lite Desk
-                <small>Deutsche Telekom AG</small>
-            </h3>
-      <p>LiteDesk is a browser based operating system similar to Google's Chromebook.</p>
-      <p>LiteDesk uses Linux and Mozilla technology with no local user files and no conventional operating system. This means it works in an environment that renders most viruses and Trojans powerless. And because the system is administrated centrally and
-        users don't need to install any software, it stays that way.</p>
-
-      <iframe width="600" height="338" src="https://www.youtube.com/embed/wz19OYdz6Do?rel=0" frameborder="0" allowfullscreen></iframe>
-      <h3>Zepp.it
-                <small>Searching made Social</small>
-            </h3>
-      <p>Zepp.it is a graph based search engine to locate service providers within your own social network. Zepp.it was discontinued after Facebook's Graph Search Release in Jan. 2013.</p>
     </section>
     <section id="vita" class="paper">
       <blockquote class="float-right text-right">
@@ -95,7 +53,7 @@
       </dl>
 
       <h2>Work Experience</h2>
-      <table class="table cv table-sm">
+      <table class="table cv">
         <tr>
           <td>2019/06&thinsp;&ndash;&thinsp;today</td>
           <td>
@@ -113,31 +71,12 @@
           </td>
         </tr>
         <tr>
-          <td>2017/01&thinsp;&ndash;&thinsp;today</td>
+          <td>2014/05&thinsp;&ndash;&thinsp;2018/12</td>
           <td>
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
               <li>responsible for operations and development of all internal tools</li>
               <li>line-management and hiring of multiple teams (15 people)</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td title="10 month">2016/02&thinsp;&ndash;&thinsp;2016/12</td>
-          <td>
-            <strong>Lead Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
-            <ul>
-              <li>tech. lead Python</li>
-              <li>product management of all fulfilment tools</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td title="10 month">2014/05&thinsp;&ndash;&thinsp;2016/02</td>
-          <td>
-            <strong>Senior Software Engineer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
-            <ul>
-              <li>leading small teams (5 people)</li>
             </ul>
           </td>
         </tr>
@@ -153,7 +92,7 @@
         <tr>
           <td title="4 years">2011/09&thinsp;&ndash;&thinsp;2014/05</td>
           <td>
-            <strong>IT-Systems Consultant</strong> freelance, IVT, Cabig, FZBBMedia, more...
+            <strong>IT-Systems Consultant</strong> Telekom, Rentrop, IVT, FZBBMedia, more...
             <ul>
               <li>IT strategy consulting</li>
               <li>software and database development</li>
@@ -171,12 +110,6 @@
           </td>
         </tr>
         <tr>
-          <td title="4 month">2012/09&thinsp;&ndash;&thinsp;2012/12</td>
-          <td>
-            <strong>Quality Engineer</strong> freelance, <a href="http://www.laboratories.telekom.com/" class="vitapop" data-original-title="Telekom Innovation Laboratories " data-content="Telekom Innovation Laboratories (T-Labs) are the central research and development unit of the company. Organizationally, T-Labs belongs to the purvey area of responsibility of the Chief Product & Innovation Officer. Their mandate is to work closely with operative units at Deutsche Telekom, offering new ideas and support in the development and implementation of innovative products, services and infrastructures for Telekom's growth areas.">Telekom Innovation Laboratories</a>
-          </td>
-        </tr>
-        <tr>
           <td title="3 years">2009/08&thinsp;&ndash;&thinsp;2011/09</td>
           <td>
             <strong>Systems Administrator</strong>, <a href="http://www.hp-ventures.com/" class="vitapop" data-original-title="Hasso Plattner Ventues" data-content="Hasso Plattner Ventures (HPV) was founded on July 1st, 2005 in Potsdam, Germany. Our mission, instilled by our main investor, Prof. Dr. h.c. Hasso Plattner, founder and chairman of software giant SAP, is to support and inspire young software and IT entrepreneurs in the successful transformation of their ideas into sustainable and viable products and companies, in Germany and abroad.">Hasso Plattner Ventures</a>
@@ -184,7 +117,7 @@
         </tr>
       </table>
       <h2>Education</h2>
-      <table class="table table-sm cv">
+      <table class="table cv page-break">
         <tr>
           <td title="12 weeks">2011&thinsp;&ndash;&thinsp;2012</td>
           <td>
@@ -270,7 +203,7 @@
       <blockquote>
         <p>Johannes joined Thermondo even thought he could have picked from a variety of companies - but he chose a business that is aligned with his ideas and that he finds worthy to work for. This decision has always accompanied him during our shared time
           at Thermondo and made him not only work hard and deliver on his job, but also go beyond and invest in the social ecosystem of the tech team and the whole company. Thank you!</p>
-        <footer class="blockquote-footer">Kristofer Fichtner (Co-Founder @ Thermondo)</footer>
+        <footer class="blockquote-footer">Kristofer Fichtner (Venture Partner @ PropTech1 & Co-Founder @ Thermondo)</footer>
       </blockquote>
 
       <blockquote>
