--- a/index.html
+++ b/index.html
@@ -37,21 +37,11 @@
       </blockquote>
       <div class="clearfix"></div>
       <div class="page-header">
-        <h1>Curriculum Vitae</h1>
+        <h1>
+          Johannes Hoppe<br>
+          <small>1988 Brandenburg (Havel), Germany</small>
+        </h1>
       </div>
-      <dl class="base-info">
-        <div class="row">
-          <div class="col-4">
-            <dt>Full name</dt>
-            <dd>Johannes Hoppe</dd>
-          </div>
-          <div class="col-8">
-            <dt>Born:</dt>
-            <dd>1988 Brandenburg (Havel), Germany</dd>
-          </div>
-        </div>
-      </dl>
-
       <h2>Work Experience</h2>
       <table class="table cv">
         <tr>
@@ -75,7 +65,7 @@
           <td>
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
-              <li>responsible for operations and development of all internal tools</li>
+              <li>responsible for the development of all internal tools</li>
               <li>line-management and hiring of multiple teams (15 people)</li>
             </ul>
           </td>
@@ -191,7 +181,6 @@
       <div class="clearfix"></div>
       <div class="page-header">
         <h1>References</h1>
-        <h2 class="no-screen">References</h2>
       </div>
 
       <blockquote>
