Add missing titles

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </td>
         </tr>
         <tr>
-          <td>2018/12&thinsp;&ndash;&thinsp;2019/05</td>
+          <td title="6 month">2018/12&thinsp;&ndash;&thinsp;2019/06</td>
           <td>
             <strong>Senior Venture Developer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
@@ -61,7 +61,7 @@
           </td>
         </tr>
         <tr>
-          <td>2014/05&thinsp;&ndash;&thinsp;2018/12</td>
+          <td title="4 &frac12; years">2014/05&thinsp;&ndash;&thinsp;2018/12</td>
           <td>
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
