Fix small issues

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
           <td>
             <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant</a>
             <ul>
-              <li>managing a small person team</li>
-              <li>responsible for platfrom development</li>
+              <li>managing a 5-person team</li>
             </ul>
         </tr>
         <tr>
@@ -115,6 +114,12 @@
             <a href="http://www.hpi.uni-potsdam.de/d_school/" data-toggle="popover" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI d.school</a>
           </td>
         </tr>
+	<tr>
+	  <td title="2 weeks">2012</td>
+	  <td>
+	    <strong>Design Challenge: Entrepreneurship</strong>, <a href="https://dschool.stanford.edu/">d.school</a>, <a href="https://stanford.edu/">Stanford University</a>
+	  </td>
+	</tr>
         <tr>
           <td title="12 weeks">2011</td>
           <td>
