Change name to Maron

--- a/index.html
+++ b/index.html
@@ -3,32 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Johannes Hoppe</title>
+  <title>Johannes Maron</title>
 
   <link rel="stylesheet" href="lib/css/screen.css" type="text/css" media="all">
 
 </head>
 
 <body id="body" data-spy="scroll" data-target="#mainNav" data-offset="50">
-  <!--googleoff: snippet-->
-
-  <nav id="mainNav" class="default dont-print">
-    <ul class="nav dont-print">
-      <li>
-        <a href="#" id="logo">
-            <img alt="Johannes Hoppe" src="images/signature.svg" width="320">
-        </a>
-      </li>
-      <li><a href="#vita">Curriculum Vitæ</a></li>
-      <li><a href="#references">References</a></li>
-      <li><a href="#contact">Contact</a>
-        <li>
-    </ul>
-  </nav>
   <!--googleon: snippet-->
   <div id="mainWrapper" class="container">
     <section id="figure1" class="dont-print">
-      <img alt="Johannes Hoppe" src="images/johannes_hoppe.jpg" width="800">
+      <img alt="Johannes Maron" src="images/johannes_maron.jpg">
     </section>
     <section id="vita" class="paper">
       <blockquote class="float-right text-right">
@@ -38,8 +23,8 @@
       <div class="clearfix"></div>
       <div class="page-header">
         <h1>
-          Johannes Hoppe<br>
-          <small>1988 Brandenburg (Havel), Germany</small>
+          Johannes Maron<br>
+          <small>né Hoppe, 1988 Brandenburg (Havel), Germany</small>
         </h1>
       </div>
       <h2>Work Experience</h2>
@@ -240,7 +225,7 @@
               <a target="_blank" href="https://twitter.com/johannes_hoppe">
                 <span class="social x2 social-twitter twitter"></span>
             </a>
-              <a target="_blank" href="mailto:Johannes%20Hoppe%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">
+              <a target="_blank" href="mailto:Johannes%20Maron%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">
                 <span class="social x2 social-e-mail email"></span>
             </a>
               <a target="_blank" href="http://stackexchange.com/users/327522">
@@ -252,20 +237,20 @@
         <div class="col">
           <div class="well">
             <address>
-                <strong>Johannes Hoppe</strong>
+                <strong>Johannes Maron</strong>
                 <br> Lennéstr. 19
                 <br> D-14469 Potsdam
                 <br> Germany
                 <br>
                 <br>
-                <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Hoppe%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">info@johanneshoppe.com</a>
+                <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Maron%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">info@johanneshoppe.com</a>
             </address>
           </div>
         </div>
       </div>
     </section>
     <div id="footer" class="dont-print">
-      <p>&copy; 2020 Johannes Hoppe, All rights reserved.</p>
+      <p>&copy; 2020 Johannes Maron, All rights reserved.</p>
     </div>
   </div>
 
