Fix mobile layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Johannes Maron</title>
 
   <link rel="stylesheet" href="lib/css/screen.css" type="text/css" media="all">
@@ -208,29 +210,35 @@
       <div class="row">
         <div id="contact_images" class="col">
           <div class="row">
-            <div class="col">
+            <div class="col-6 col-md-4">
               <a target="_blank" href="https://github.com/codingjoe">
                 <span class="social x2 social-github github"></span>
-            </a>
+              </a>
+            </div>
+            <div class="col-6 col-md-4">
               <a target="_blank" href="https://www.linkedin.com/in/codingjoe">
-              <span class="social x2 social-linked-in linked-in"></span>
-            </a>
+                <span class="social x2 social-linked-in linked-in"></span>
+              </a>
+            </div>
+            <div class="col-6 col-md-4">
               <a target="_blank" href="https://facebook.com/codingjoe">
                 <span class="social x2 social-facebook facebook"></span>
-            </a>
+              </a>
             </div>
-          </div>
-          <div class="row">
-            <div class="col">
+            <div class="col-6 col-md-4">
               <a target="_blank" href="https://twitter.com/johannes_hoppe">
                 <span class="social x2 social-twitter twitter"></span>
-            </a>
+              </a>
+            </div>
+            <div class="col-6 col-md-4">
               <a target="_blank" href="mailto:Johannes%20Maron%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">
                 <span class="social x2 social-e-mail email"></span>
-            </a>
+              </a>
+            </div>
+            <div class="col-6 col-md-4">
               <a target="_blank" href="http://stackexchange.com/users/327522">
                 <span class="social x2 social-stackexchange stackexchange"></span>
-            </a>
+              </a>
             </div>
           </div>
         </div>
