--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <td>
             <strong>Senior Venture Developer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
-              <li>in-house consulting</li>
+              <li>in-house consulting reporting to the CEO</li>
               <li>restructuring the existing service organization</li>
             </ul>
           </td>
@@ -52,7 +52,7 @@
           <td>
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
             <ul>
-              <li>responsible for the development of all internal tools</li>
+              <li>responsible for the all software development reporting to the CTO</li>
               <li>line-management and hiring of multiple teams (15 people)</li>
             </ul>
           </td>
@@ -62,16 +62,17 @@
           <td>
             <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant</a>
             <ul>
-              <li>managing a 5-person team</li>
+              <li>managing a business and a 5-person team</li>
             </ul>
         </tr>
         <tr>
-          <td title="4 years">2011/09&thinsp;&ndash;&thinsp;2014/05</td>
+          <td>2011/09&thinsp;&ndash;&thinsp;today</td>
           <td>
-            <strong>IT-Systems Consultant</strong> Telekom, Rentrop, IVT, FZBBMedia, more...
+            <strong>IT-Systems Consultant</strong> Telekom, Rentrop, Momox, IVT, more...
             <ul>
               <li>IT strategy consulting</li>
               <li>software and database development</li>
+              <li>senior/executinve headhunting and hiring consulting</li>
             </ul>
           </td>
         </tr>
