Update email to johannes@maron.family

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               </a>
             </div>
             <div class="col-6 col-md-4">
-              <a target="_blank" href="mailto:Johannes%20Maron%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">
+              <a target="_blank" href="mailto:Johannes%20Maron%20%3Cjohannes@maron.family%3E?subject=Contact">
                 <span class="social x2 social-e-mail email"></span>
               </a>
             </div>
@@ -252,7 +252,7 @@
                 <br> Germany
                 <br>
                 <br>
-                <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Maron%20%3Cinfo@johanneshoppe.com%3E?subject=Contact">info@johanneshoppe.com</a>
+                <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Maron%20%3Cjohannes@maron.family%3E?subject=Contact">info@johanneshoppe.com</a>
             </address>
           </div>
         </div>
