Update email label to new email

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <br> Germany
                 <br>
                 <br>
-                <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Maron%20%3Cjohannes@maron.family%3E?subject=Contact">info@johanneshoppe.com</a>
+                <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Maron%20%3Cjohannes@maron.family%3E?subject=Contact">johannes@maron.family</a>
             </address>
           </div>
         </div>
