Add mastodon link

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                 <br>
                 <br>
                 <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Maron%20%3Cjohannes@maron.family%3E?subject=Contact">johannes@maron.family</a>
+                <addr title="Mastodon">M:</addr> <a rel="me" href="https://fosstodon.org/@codingjoe">@codingjoe</a>
             </address>
           </div>
         </div>
