--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="page-header">
         <h1>
           Johannes Maron<br>
-          <small>né Hoppe, 1988 Brandenburg (Havel), Germany</small>
+          <small>née Hoppe, 1988 Brandenburg (Havel), Germany</small>
         </h1>
       </div>
       <h2>Work Experience</h2>
@@ -31,62 +31,65 @@
         <tr>
           <td>2019/06&thinsp;&ndash;&thinsp;today</td>
           <td>
-            <strong>Chief Technology Officer (CTO)</strong>, <a href="//www.voiio.de/" target="_blank" class="vitapop" data-original-title="voiio GmbH" data-content="voiio is poviding family services to work-life balance conscious companies.">voiio</a>
+            <strong>Co-Founder & CTO</strong>, <a href="//www.voiio.de/" target="_blank" class="vitapop" data-original-title="voiio GmbH" data-content="voiio is poviding family services to work-life balance conscious companies.">voiio</a>
+            <ul>
+              <li>responsible for the B2C product development, platform operations and content creation</li>
+              <li>leading teams of teams (~15 people)</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>2011/09&thinsp;&ndash;&thinsp;today</td>
+          <td>
+            <strong>Consulting Advisor</strong>, <em>Telekom, Rentrop Group, Momox, IVT, more&hellip;</em>
+            <ul>
+              <li>Startup advisor, design thinking, IT consulting, headhunting</li>
+            </ul>
           </td>
         </tr>
         <tr>
           <td title="6 month">2018/12&thinsp;&ndash;&thinsp;2019/06</td>
           <td>
-            <strong>Senior Venture Developer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
+            <strong>Senior Venture Developer</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo (exit)</a>
             <ul>
               <li>in-house consulting reporting to the CEO</li>
-              <li>restructuring the existing service organization</li>
+              <li>restructuring the customer service organization</li>
             </ul>
           </td>
         </tr>
         <tr>
           <td title="4 &frac12; years">2014/05&thinsp;&ndash;&thinsp;2018/12</td>
           <td>
-            <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo</a>
+            <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo (exit)</a>
             <ul>
-              <li>responsible for the all software development reporting to the CTO</li>
-              <li>line-management and hiring of multiple teams (15 people)</li>
+              <li>responsible for the software engineer, reporting to the CTO</li>
+              <li>leading multiple teams (~15 people)</li>
             </ul>
           </td>
         </tr>
         <tr>
           <td title="4 years">2012/03&thinsp;&ndash;&thinsp;2015/10</td>
           <td>
-            <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant</a>
+            <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant (closed)</a>
             <ul>
               <li>managing a business and a 5-person team</li>
             </ul>
         </tr>
         <tr>
-          <td>2011/09&thinsp;&ndash;&thinsp;today</td>
-          <td>
-            <strong>IT-Systems Consultant</strong> Telekom, Rentrop, Momox, IVT, more...
-            <ul>
-              <li>IT strategy consulting</li>
-              <li>software and database development</li>
-              <li>senior/executinve headhunting and hiring consulting</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
           <td title="3 month">2013/04&thinsp;&ndash;&thinsp;2013/06</td>
           <td>
-            <strong>Consulting Design Thinker</strong>, <a href="http://baumev.de/" class="vitapop" data-original-title="Bundesdeutscher Arbeitskreis f&uuml;r Umweltbewustes Management e.V." data-content="B.A.U.M. - das Informations- und Kontaktnetzwerk für Umweltmanagement und nachhaltige Entwicklung. 25 Jahre Praxiserfahrung für Unternehmen.">B.A.U.M.</a>,
+            <strong>Guest Lecturer</strong>,
             <a href="http://www.hpi.uni-potsdam.de/d_school/" class="vitapop" data-original-title="HPI School of Design Thinking" data-content="To promote a special innovation culture, the Hasso-Plattner-Institute has been offering the first academic advanced training in Design Thinking within Germany since October 2007. The revolutionary concept of the Design Thinking approach is to group students in small multi-disciplinary teams so they can uncover unexpected innovations by combining their different points of views. The HPI School of Design Thinking in Potsdam is the first school for innovation in Europe, which is designed according to the famous d.school at the Stanford University.">HPI School of Design Thinking</a>
             <ul>
-              <li>guide a small team through 12 week program</li>
+              <li>guide students through 12-week design thinking program</li>
+              <li>guest lecture by invite of Prof. Dr. Werner Zorn</li>
             </ul>
           </td>
         </tr>
         <tr>
           <td title="3 years">2009/08&thinsp;&ndash;&thinsp;2011/09</td>
           <td>
-            <strong>Systems Administrator</strong>, <a href="http://www.hp-ventures.com/" class="vitapop" data-original-title="Hasso Plattner Ventues" data-content="Hasso Plattner Ventures (HPV) was founded on July 1st, 2005 in Potsdam, Germany. Our mission, instilled by our main investor, Prof. Dr. h.c. Hasso Plattner, founder and chairman of software giant SAP, is to support and inspire young software and IT entrepreneurs in the successful transformation of their ideas into sustainable and viable products and companies, in Germany and abroad.">Hasso Plattner Ventures</a>
+            <strong>Working Student</strong>, <a href="http://www.hp-ventures.com/" class="vitapop" data-original-title="Hasso Plattner Ventues" data-content="Hasso Plattner Ventures (HPV) was founded on July 1st, 2005 in Potsdam, Germany. Our mission, instilled by our main investor, Prof. Dr. h.c. Hasso Plattner, founder and chairman of software giant SAP, is to support and inspire young software and IT entrepreneurs in the successful transformation of their ideas into sustainable and viable products and companies, in Germany and abroad.">Hasso Plattner Ventures</a>
           </td>
         </tr>
       </table>
