--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Johannes Maron</title>
 
   <link rel="stylesheet" href="lib/css/screen.css" type="text/css" media="all">
+  <style>
+    em {
+      color: dimgrey;
+      font-style: normal;
+    }
+  </style>
 
 </head>
 
