--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <strong>Co-Founder & CTO</strong>, <a href="//www.voiio.de/" target="_blank" class="vitapop" data-original-title="voiio GmbH" data-content="voiio is poviding family services to work-life balance conscious companies.">voiio</a>
             <ul>
               <li>responsible for the B2C product development, platform operations and content creation</li>
-              <li>leading teams of teams (~15 people)</li>
+              <li>leading teams of teams & growing the company to 50 people</li>
             </ul>
           </td>
         </tr>
@@ -69,7 +69,7 @@
             <strong>Team Lead Software Engineering</strong>, <a href="//www.thermondo.de/" target="_blank" class="vitapop" data-original-title="Thermondo GmbH" data-content="Thermondo is a clean tech startup. We retrofit heatings. Heat and hot water rank second in domestic energy consumption in Germany. By renewing heatings we save CO₂ and fight climate change.">Thermondo (exit)</a>
             <ul>
               <li>responsible for the software engineer, reporting to the CTO</li>
-              <li>leading multiple teams (~15 people)</li>
+              <li>leading multiple teams & growing the company to 800 people</li>
             </ul>
           </td>
         </tr>
