update veerkant info

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <td>
             <strong>Founder &amp; Managing Partner</strong>, <a href="http://veerkant.com/" class="vitapop" data-original-title="Veerkant" data-content="Discover, experience and share your favourite artworks at Veerkant, the fine art online gallery that gives you an easy access to well curated artists and their paintings. Exploring amazing art has never been so simple.">Veerkant (closed)</a>
             <ul>
-              <li>managing a business and a 5-person team</li>
+              <li>managing a seed state fine art startup</li>
             </ul>
         </tr>
         <tr>
