Imrpove print margins

--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
   <title>Johannes Maron</title>
 
   <link rel="stylesheet" href="lib/css/screen.css" type="text/css" media="all">
-  <style>
+  <style type="text/css">
     em {
       color: dimgrey;
       font-style: normal;
+    }
+    @media print {
+      .paper {
+        margin: 0 !important;
+      }
+      .container {
+        max-width: unset !important;
+      }
     }
   </style>
 
