--- a/index.html
+++ b/index.html
@@ -142,31 +142,28 @@
         <div class="col-3">
           <h4>Languages</h4>
           <dl>
-            <dt>German</dt>
-            <dd>native speaker</dd>
-            <dt>English</dt>
-            <dd>fluent</dd>
-            <dt>Spanish</dt>
-            <dd>beginner</dd>
+            <dt>German (C2)</dt>
+            <dt>English (C2)</dt>
+            <dt style="font-weight: normal">Spanish (A1)</dt>
+            <dt style="font-weight: normal">Italian (A1)</dt>
+            <dt style="font-weight: normal">Japanese (A1)</dt>
           </dl>
         </div>
 
         <div class="col-4">
-          <h4>IQ Test Scores</h4>
+          <h4>Profiles</h4>
           <dl>
-            <dt>MAT</dt>
-            <dd>PR 100</dt>
-              <dt>CFT-20</dt>
-              <dd>PR 100</dd>
+            <dt>GitHub</dt>
+            <dd><a href="https://github.com/codingjoe" target="_blank">github.com/codingjoe</a></dd>
+            <dt>LinkedIn</dt>
+            <dd><a href="https://www.linkedin.com/in/codingjoe" target="_blank">linkedin.com/in/codingjoe</a></dd>
           </dl>
         </div>
         <div class="col-5">
           <h4>Awards &amp; Memberships</h4>
           <dl>
             <dt>Business Plan Competition</dt>
-            <dd>3rd place (2014)</dd>
-            <dt>Business Plan Competition</dt>
-            <dd>2nd place (2012)</dd>
+            <dd>2nd place (2012), 3rd place (2014)</dd>
             <dt><a href="http://www.mensa.org/">Mensa International</a></dt>
             <dd>high IQ society (since 2008)</dd>
           </dl>
@@ -266,7 +263,11 @@
                 <br> Germany
                 <br>
                 <br>
+                <abbr title="Umsatzsteueridentifikationsnummer">USt-IdNr.:</abbr> DE284754038
+                <br>
+                <br>
                 <abbr title="E-Mail">E:</abbr> <a href="mailto:Johannes%20Maron%20%3Cjohannes@maron.family%3E?subject=Contact">johannes@maron.family</a>
+                <br>
                 <addr title="Mastodon">M:</addr> <a rel="me" href="https://fosstodon.org/@codingjoe">@codingjoe</a>
             </address>
           </div>
