Avoid page break

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     @media print {
       .paper {
         margin: 0 !important;
+        page-break-after: always;
+        page-break-inside: avoid;
       }
       .container {
         max-width: unset !important;
