Drop page-break

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </tr>
       </table>
       <h2>Education</h2>
-      <table class="table cv page-break">
+      <table class="table cv">
         <tr>
           <td title="12 weeks">2011&thinsp;&ndash;&thinsp;2012</td>
           <td>
