--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <td>
             <strong>Co-Founder & CTO</strong>, <a href="//www.voiio.de/" target="_blank" class="vitapop" data-original-title="voiio GmbH" data-content="voiio is poviding family services to work-life balance conscious companies.">voiio</a>
             <ul>
-              <li>responsible for the B2C product development, platform operations and content creation</li>
+              <li>responsible for the B2C product development, platform operations & content creation</li>
               <li>leading teams of teams & growing the company to 50 people</li>
             </ul>
           </td>
