Add Kerstin's referenz

--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
       </blockquote>
 
       <blockquote>
+        <p>Johannes brought an inspiring combination of deep passion for product development, remarkable technical genius, and genuine people leadership to voiio. He didn't just build; he innovated with a clarity that cut through complexity, always grounded by sharp business street smarts. More importantly, he led with a supportive spirit that empowered our team. His impact was unmeasurable.</p>
+        <footer class="blockquote-footer">Kerstin Michels (Co-Founder & Managing Director @ voiio)</footer>
+      </blockquote>
+
+      <blockquote>
         <p>Es ist immer gut, wenn man weiß, dass man sich auf bestimmte Leute verlassen kann.</p>
         <footer class="blockquote-footer">Dr. Dirk Barchmann (CEO @ Institut f&uuml;r Verhaltenstherapie)</footer>
       </blockquote>
