Add GitHub stats to references

--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
         <footer class="blockquote-footer">Dr. Philipp Offermann (Product Manager @ Telekom Innovation Labs)</footer>
       </blockquote>
 
+      <a href="https://green-wall.leoku.dev/share/codingjoe?start=2014&showSafariHeader=false&showAttribution=false" target="_blank" style="margin: 0 -1.5rem; display: flex; flex-direction: row; align-items: flex-start">
+      <img alt="GitHub contribution stats" src="https://github-readme-stats.vercel.app/api?username=codingjoe&include_all_commits=true&hide_border=true&theme=transparent&title_color=1b1e21&ring_color=2f80ed&text_color=696969" style="margin-right: -3rem">
+      <img alt="GitHub contribution stats" src="https://github-readme-stats.vercel.app/api/top-langs/?username=codingjoe&layout=compact&include_all_commits=true&hide_border=true&theme=transparent&title_color=1b1e21&text_color=696969">
+        </a>
+
 
     </section>
 
